tests/errors/arrays/assign-non-indexable-user-type.fn
---
Description: Index-assigning a user-defined type with no setter
Expected: FN3214
---

type Vector2
{
    x: f32
    y: f32

    init(x: f32, y: f32)
    {
        this.x = x
        this.y = y
    }
}

type Program
{
    fn Main -> i32
    {
        var v = Vector2(1.0, 2.0)
        v[0] = 1.0
        return 0
    }
}
